OpenLDAP 2.2 Change Log

OpenLDAP 2.2.27 Engineering
	Fixed ACL val default style parsing crasher (ITS#3700)

OpenLDAP 2.2.26 Release
	Fixed back-bdb ldapadd ctxcsn crash (ITS#3685)
	Fixed back-hdb search crash (ITS#3688)

OpenLDAP 2.2.25 Release
	Fixed back-hdb out-of-order slapadd (ITS#3267)
	Fixed back-bdb/hdb search crashes (ITS#3638, 3647)
	Fixed back-bdb/hdb modrdn (ITS#3657)
	Fixed back-bdb ctxcsn/LRU bug (ITS#3666)
	Fixed back-dnssrv referral all but search op crasher bug (ITS#3642)
	Fixed back-ldbm shutdown hang (ITS#3648)
	Fixed back-meta memory leak (ITS#3669)
	Fixed back-monitor attribute normalization bug (ITS#3659)
	Removed broken libldap fast synchronous search result processing (ITS#3612)
	Build Environment
		Added improved configure logging

OpenLDAP 2.2.24 Release
	Fixed slapd "chldren:" typo (ITS#3560)
	Fixed slapd syncrepl consumer unclean shutdown (ITS#3546)
	Fixed slapd syncrepl provider sessionlog (ITS#3571)
	Fixed slapd subentry control parse bug (ITS#3563)
	Fixed slapd connection_abandon processing (ITS#3534, 3546, 3571)
	Fixed slapd callback cleanup processing (ITS#3596)
	Fixed slapd default password hash to use SSHA (ITS#3557)
	Fixed back-bdb referral fault (ITS#3602)
	Fixed slap tool log initialization (ITS#3579)
	Fixed slapi modify/increment support (ITS#3522)
	Fixed slapi plugins called multiple times with glue (ITS#3529)
	Fixed slapi 64-bit portability (ITS#3556)
	Fixed back-bdb IDL cache crash (ITS#3527)
	Fixed back-bdb initialization message (ITS#3533)
	Fixed back-hdb dn2id crash (ITS#3559)
	Fixed back-ldap search with stale connection (ITS#3537)
	Fixed libldap fdset re-init for restart (ITS#3524)
	Fixed libldap ldap_extended_operation_s (ITS#3552)
	Added libldap fast synchronous search result processing
	Build Environment
		Updated BDB version check (ITS#3581)
		Updated memcmp replacement
		Updated -lV3 configure check
	Documentation
		Add slapd-hdb(5)
		Updated slapd(8) (ITS#3591)
		Updated README

OpenLDAP 2.2.23 Release